Bug 386660 - Rich text setting is not saved
Summary: Rich text setting is not saved
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 386903 386968 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-11-08 20:16 UTC by Christophe Marin
Modified: 2018-03-16 14:14 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2017-11-08 20:16:44 UTC
Using master. When creating new messages, rich text is always enabled.

1/ "New"
2/ Click on the "Rich text" button
3/ Save as draft (or send a message)
4/ Click on "New"

→ Rich text is enabled.
Comment 1 Christophe Marin 2017-11-08 20:21:08 UTC
Note: iirc, there was a setting about plain/html messages by default. This is gone.

Showing the message structure is also gone it seems.
Comment 2 Laurent Montel 2017-11-09 05:01:01 UTC
I confirm it.
Comment 3 Laurent Montel 2017-11-09 06:50:01 UTC
Git commit ece5c76c708797f2b1ec5bb22460089428ab6d80 by Montel Laurent.
Committed on 09/11/2017 at 06:48.
Pushed by mlaurent into branch 'master'.

Fix Bug 386660 - Rich text setting is not saved

M  +2    -0    templateparser/src/templateparserjob.cpp

https://commits.kde.org/messagelib/ece5c76c708797f2b1ec5bb22460089428ab6d80
Comment 4 Christophe Marin 2017-11-15 22:06:25 UTC
*** Bug 386968 has been marked as a duplicate of this bug. ***
Comment 5 Christophe Marin 2017-11-15 22:06:37 UTC
*** Bug 386903 has been marked as a duplicate of this bug. ***