Fix Bug 386660 - Rich text setting is not saved

BUG: 386660